--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "^6.11.1",
     "bcrypt": "^6.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "dotenv": "^17.2.0",
     "prisma": "^6.11.1",
     "reflect-metadata": "^0.2.2",
