--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
       "@auth/*": ["src/modules/auth/*"],
       "@database/*": ["src/database/*"],
       "@environment/*": ["src/environment/*"],
+      "@translation/*": ["src/generated/*"],
     }
   }
 }
