ADD: Configuraciones minimas para armar tests unitarios completa, test basico para auth controller

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
       "@database/*": ["src/database/*"],
       "@environment/*": ["src/environment/*"],
       "@translation/*": ["src/generated/*"],
+      "@test/*": ["src/test/*"],
     }
   }
 }
