--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "^6.11.1",
+    "@types/cookie-parser": "^1.4.9",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.0",
     "jsonwebtoken": "^9.0.2",
     "nestjs-i18n": "^10.5.1",
