ADD: Auth Guard, ruta profile y respectivos tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
       "@environment/*": ["src/environment/*"],
       "@translation/*": ["src/generated/*"],
       "@test/*": ["src/test/*"],
-    }
+    },
+    "typeRoots": ["./types" ,"./node_modules/@types"]
   }
 }
