UPATE: Migration to uuid on postgres db, ADD: mongodb and first integration with jwtblacklist

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 DATABASE_URL="connection string"
+MONGO_DATABASE_URL="connection string"
 USER_DEFAULT_PASSWORD="password"
 JWT_SECRET="secretkey"
 JWT_EXPIRATION=3600
