--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-DATABASE_URL="connection string"
-MONGO_DATABASE_URL="connection string"
-USER_DEFAULT_PASSWORD="password"
+DATABASE_URL="postgresql://user:password@host:port/database?parameters"
+MONGO_DATABASE_URL="mongodb://username:password@host:port/database?authSource=authDatabase"
+USER_DEFAULT_PASSWORD="12345"
 JWT_SECRET="secretkey"
 JWT_EXPIRATION=3600
