update: Type for exp token env variable

--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,5 @@ MONGO_DATABASE_URL="mongodb://username:password@host:port/database?authSource=au
 USER_DEFAULT_PASSWORD="12345"
 DEFAULT_LANG="es"
 JWT_SECRET="secretkey"
-JWT_EXPIRATION=3600
+JWT_EXPIRATION='1d'
+COOKIE_EXPIRATION=3600
