add: Refresh token initial methods

--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,5 @@ USER_DEFAULT_PASSWORD="12345"
 DEFAULT_LANG="es"
 JWT_SECRET="secretkey"
 JWT_EXPIRATION='1d'
+JWT_REFRESH_EXPIRATION='2w'
 COOKIE_EXPIRATION=3600
