--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ JWT_SECRET="secretkey"
 JWT_EXPIRATION='1d'
 JWT_REFRESH_EXPIRATION='2w'
 COOKIE_EXPIRATION=3600
+MAIL_HOST="smpt.example.email"
+MAIL_PORT=587
+MAIL_USER="user@example.email"
+MAIL_PASS="password"
