--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@prisma/client": "^6.11.1",
     "@types/cookie-parser": "^1.4.9",
     "@types/luxon": "^3.7.1",
+    "@types/nodemailer": "^7.0.1",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
@@ -39,6 +40,7 @@
     "luxon": "^3.7.1",
     "mongodb": "6.18",
     "nestjs-i18n": "^10.5.1",
+    "nodemailer": "^7.0.5",
     "prisma": "^6.11.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
