add: MAIL_SENDER env variable configuration

--- a/.env.example
+++ b/.env.example
@@ -9,4 +9,5 @@ COOKIE_EXPIRATION=3600
 MAIL_HOST="smpt.example.email"
 MAIL_PORT=587
 MAIL_USER="user@example.email"
+MAIL_SENDER="sender@example.email"
 MAIL_PASS="password"
